yaml/app2-deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app2-deployment
  labels:
    app: flask-app2
spec:
  replicas: 1  # Number of pods to run
  selector:
    matchLabels:
      app: flask-app2
  template:
    metadata:
      labels:
        app: flask-app2
    spec:
      containers:
      - name: flask-app2
        image: vin1989/flask-app2-alb:1.0  # Update with your Docker image location if pushed to a repository
        ports:
        - containerPort: 5002
        
---
apiVersion: v1
kind: Service
metadata:
  name:  alb-flask-app2-service
  labels:
    app: flask-app2
  annotations:    
    alb.ingress.kubernetes.io/healthcheck-path: /app2/check-health

spec:
  type: NodePort  # Default is classic LB
  selector:
    app: flask-app2
  ports:
    - protocol: TCP
      port: 80  # External port for the LoadBalancer
      targetPort: 5002  # The port on the Flask app container
